--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 PORT=
+
+JWT_SECRET_KEY=
+
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL=
+
+# Direct connection to the database. Used for migrations.
+DIRECT_URL=
