feat: edit transaction and send email

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ DATABASE_URL=
 
 # Direct connection to the database. Used for migrations.
 DIRECT_URL=
+
+#For sending email
+GMAIL_EMAIL=
+GMAIL_APP_PASSWORD=
