feat: add register, create referral, points, and coupon

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 PORT=
 
 JWT_SECRET_KEY=
 
-# Connect to Supabase via connection pooling with Supavisor.
-DATABASE_URL=
-
-# Direct connection to the database. Used for migrations.
+# Direct connection to the database. Used for migrations. (If Needed)
 DIRECT_URL=
 
 #For sending email
 GMAIL_EMAIL=
 GMAIL_APP_PASSWORD=
+
+# Cloudinary Setup
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
