--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=
 
 JWT_SECRET_KEY=
+JWT_SECRET_FORGOT_PASSWORD=
 
 # Direct connection to the database. Used for migrations. (If Needed)
 DIRECT_URL=
