--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.1",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/streamifier": "^0.1.2",
     "nodemon": "^3.1.7",
@@ -36,6 +37,7 @@
     "file-type": "^16.5.4",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "prisma": "^6.0.1",
     "streamifier": "^0.1.1"
