--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ PORT=
 JWT_SECRET_KEY=
 JWT_SECRET_FORGOT_PASSWORD=
 
+DATABASE_URL=
+
 # Direct connection to the database. Used for migrations. (If Needed)
 DIRECT_URL=
 
